--- a/app/index-async.html
+++ b/app/index-async.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Google Phone Gallery</title>
+  <title>RECLAMAMOS S.A - Powered by GREEN MARKER TEAM</title>
   <style>
     [ng-cloak] {
       display: none;
