--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app="phonecatApp">
+<html lang="en" ng-app="reclamamosApp">
 <head>
   <meta charset="utf-8">
   <title>RECLAMAMOS S.A - Powered by GREEN MARKER TEAM</title>
