--- a/app/vistas/formularioReclamacion.html
+++ b/app/vistas/formularioReclamacion.html
@@ -1,3 +1,29 @@
+<style type="text/css">
+<!--
+body {
+  margin-left: 0px;
+  margin-top: 0px;
+  margin-right: 0px;
+  margin-bottom: 0px;
+}
+
+table
+{
+border:1px solid #2F7F12;
+border-radius: 5px;
+width:200px;
+}
+td
+{
+padding-top:5px;
+padding-bottom:5px;
+padding-right:3px;
+padding-left:3px;
+}
+.Estilo1 {font-family: Arial, Helvetica, sans-serif; font-weight: bold; font-size: 13px; color: #94D67C; background: #F2FFEE}
+-->
+</style>
+
 <div class="row-fluid">
     <div class="span2">
       <!--Sidebar content-->      
@@ -5,112 +31,209 @@
     <div class="span10">
       <!--Body content-->
        <form name="Form">
-       <table border="0" style="width: 800px" cellpadding="0" cellspacing="0">
+       <table style="width: 860px" >
+        <tr>                   
+          <td colspan="4" align="center"><img src="img/BANNER1.jpg"></td>
+        </tr>
         <tr>
-          <td colspan="5"> 
-          <CENTER>
-          <table border="0" style="width: 100%" cellpadding="0" cellspacing="0" class="thumbnail phone-listing">
-            <tr><td colspan="5"><img src="img/BANNER1.jpg"></td></tr>
-          </table>
-          </CENTER>
-          <center>
-          <table border="0" style="width: 100%;" cellpadding="0" cellspacing="0" class="thumbnail phone-listing">
-            <tbody>
+          <td>
+            <table>
               <tr>
-                <td>Tipo de documento (*)&nbsp;</td>
-                <td><select id="tipoDocumentoCliente" ng-model="documento" ng-options="c.name for c in documentos" required></select><br></td> 
-                <td>&nbsp;</td>      
-                <td>Número de documento (*)&nbsp;</td>
-                <td><input id="numeroDocumento" type="text" name="numeroDocumento" class="upper" maxlength="16" required>&nbsp; <button type="submit" ng-click="informacionCliente()">Buscar</button> </td>
+                <td  class="Estilo1">Tipo de documento (*)&nbsp;</td>
               </tr>
-            </tbody>
-          </table>
-          </center>
-              <center>    
-              <table border="0" style="width: 100%;" cellpadding="0" cellspacing="0" ng-repeat="poliza in polizas" class="thumbnail phone-listing">
-                <tbody> 
-                  <tr>
-                    <td>Primer nombre </td>
-                    <td ><input id="primerNombre" type="text" name="primerNombre" class="upper" ng-model="poliza.primerNombre" disabled></td>
-                    <td width="10%">&nbsp;</td>
-                    <td>Segundo nombre</td>
-                    <td><input id="segundoNombre" type="text" name="segundoNombre" class="upper" ng-model="poliza.segundoNombre" disabled></td>
-                  </tr>
-                  <tr>
-                    <td>Primer apellido</td>
-                    <td><input id="primerApellido" type="text" name="primerApellido" class="upper" ng-model="poliza.primerApellido" disabled ></td>
-                    <td>&nbsp;</td>
-                    <td>Segundo apellido</td>
-                    <td><input id="segundoApellido" type="text" name="segundoApellido" class="upper" ng-model="poliza.segundoApellido" disabled></td>
-                  </tr>
-                  <tr>
-                    <td>Tipo </td>
-                    <td><input id="tipoCliente" type="text" name="tipoCliente"  class="upper" ng-model="poliza.tipoCliente" disabled ></td>
-                    <td>&nbsp;</td>
-                    <td>Fecha de nacimiento</td>
-                    <td><input id="fechaNacimiento" type="text" name="fechaNacimiento" class="upper" ng-model="poliza.fechaNacimiento" disabled > </td>
-                  </tr>
-                  <tr><td colspan="5"><HR></td></tr>
-                  <tr>
-                    <td>Tipo de vehículo </td>
-                    <td><input id="tipoVehiculo" type="text" name="tipoVehiculo" class="upper" ng-model="poliza.vehiculo.tipoVehiculo" disabled  ></td>
-                    <td>&nbsp;</td>
-                    <td>Referencia</td>
-                    <td><input id="referencia" type="text" name="referencia"  class="upper" ng-model="poliza.vehiculo.referencia" disabled  ></td>
-                  </tr>
-                  <tr>
-                    <td>Número de póliza </td>
-                    <td><input id="numeroPoliza" type="text" name="numeroPoliza"  class="upper" ng-model="poliza.vehiculo.numeroPoliza" disabled ></td>
-                    <td>&nbsp;</td>
-                    <td>Fecha inicio de vigencia</td>
-                    <td><input id="fechaInicioVigencia" type="text" name="fechaInicioVigencia"   class="upper" ng-model="poliza.vehiculo.fechaInicioVigencia" disabled ></td>
-                  </tr>
-                  <tr>
-                    <td>Fecha fin de vigencia </td>
-                    <td><input id="fechaFinVigencia" type="text" name="fechaFinVigencia"  class="upper" ng-model="poliza.vehiculo.fechaFinVigencia" disabled ></td>
-                    <td>&nbsp;</td>
-                    <td>&nbsp;</td>
-                  </tr>       
-                <tr><td colspan="5"><HR></td></tr>
-                <form name="ingreso">
-                  <tr>
-                    <td>Fecha del incidente (*)</td>
-                    <td><input type="date" id="fechaIncidente"  name="fechaIncidente"  class="upper" required></td>
-                    <td width="10%"></td>
-                    <td>Motivo incidente (*)</td>
-                     <td>
-                     <select id="listaMotivos" ng-model="motivo" ng-options="m.name for m in motivos" required></select><br>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>Valor de reparación aproximado (*)</td>
-                    <td><input  type="number" id="valor" name="valor"  class="upper" required></td>                 
-                    <td>&nbsp;</td>
-                    <td>Descripción (*)</td>
-                    <td><textarea <input id="descripcionIncidente"  name="descripcionIncidente"  class="upper" rows="4" cols="30" required></textarea></td>
-                  </tr>
-                  <tr>
-                    <td>Lugar del incidente (*)</td>
-                    <td><input id="lugarIncidente" type="text" name="lugarIncidente"  class="upper" required></td>
-                    <td>&nbsp;</td>
-                    <td>Culpable (*)</td>
-                    <td>Si <input type="radio" name="culpable" value="si"> No <input type="radio" name="culpable" value="no"> </td>
-                  </tr>
-                  <tr>
-                    <td>&nbsp;</td>
-                    <td>&nbsp;</td>
-                    <td>&nbsp; <button type="submit" ng-click="guardarIncidente()"> Enviar</button></td> 
-                    <td>&nbsp;</td>
-                    <td>&nbsp;</td>
-                  </tr>
-                </form>                
-                </tbody>
-              </table>
-              </center>
-            </td>
+            </table>
+          </td>
+          <td><select id="tipoDocumentoCliente" ng-model="documento" ng-options="c.name for c in documentos" required></select></td>
+          <td>&nbsp;</td>  
+          <td>&nbsp;</td>             
+        </tr>
+        <tr>
+          <td>
+            <table>
+              <tr>
+                <td  class="Estilo1">N&uacute;mero de documento (*)&nbsp;</td>
+              </tr>
+            </table>
+          </td>
+          <td><input id="numeroDocumento" type="text" name="numeroDocumento" maxlength="16" required>&nbsp;  </td>
+          <td>&nbsp;</td> 
+          <td align="center"><button  type="submit" ng-click="informacionCliente()">Buscar</button></td>
         </tr>
       </table>
-            </form>
-              </div>
-            </div>
-          </div>
+      </form>
+
+        <table  ng-repeat="poliza in polizas" style="width: 860px">
+          <tr>
+            <td>
+            <table>
+              <tr>
+                <td class="Estilo1">Primer nombre </td>
+              </tr>
+            </table>
+          </td>            
+            <td ><input id="primerNombre" type="text" name="primerNombre" ng-model="poliza.primerNombre" disabled></td>
+            <td>
+            <table>
+              <tr>
+                <td class="Estilo1">Segundo nombre</td>
+              </tr>
+            </table>
+          </td>
+          <td><input id="segundoNombre" type="text" name="segundoNombre" ng-model="poliza.segundoNombre" disabled></td>
+          </tr>
+          <tr>
+            <td>
+            <table>
+              <tr>
+                <td class="Estilo1">Primer apellido</td>
+              </tr>
+            </table>
+          </td>  
+          <td><input id="primerApellido" type="text" name="primerApellido" ng-model="poliza.primerApellido" disabled ></td>
+          <td>
+            <table>
+              <tr>
+                <td class="Estilo1">Segundo apellido</td>
+              </tr>
+            </table>
+          </td>  
+          <td><input id="segundoApellido" type="text" name="segundoApellido" ng-model="poliza.segundoApellido" disabled></td>
+          </tr>
+          <tr>
+            <td>
+            <table>
+              <tr>
+                <td class="Estilo1">Tipo </td>
+              </tr>
+            </table>
+            </td>
+            <td><input id="tipoCliente" type="text" name="tipoCliente"  ng-model="poliza.tipoCliente" disabled ></td>
+              <td>
+              <table>
+                <tr>
+                  <td class="Estilo1">Fecha de nacimiento</td>
+                </tr>
+              </table>
+            </td>
+            <td><input id="fechaNacimiento" type="text" name="fechaNacimiento" ng-model="poliza.fechaNacimiento" disabled > </td>
+          </tr>
+          <tr>
+            <td colspan="4"><HR></td>
+          </tr>
+          <tr>
+            <td>
+            <table>
+              <tr>
+                <td class="Estilo1">Tipo de vehículo </td>
+              </tr>
+            </table>
+            </td> 
+            <td><input id="tipoVehiculo" type="text" name="tipoVehiculo"  ng-model="poliza.vehiculo.tipoVehiculo" disabled  ></td>
+            <td>
+            <table>
+              <tr>
+                <td class="Estilo1">Referencia</td>
+              </tr>
+            </table>
+            </td>            
+            <td><input id="referencia" type="text" name="referencia"  ng-model="poliza.vehiculo.referencia" disabled  ></td>
+          </tr>
+          <tr>
+            <td>
+            <table>
+              <tr>
+                <td class="Estilo1">N&uacute;mero de póliza </td>
+              </tr>
+            </table>
+            </td>             
+            <td><input id="numeroPoliza" type="text" name="numeroPoliza"  ng-model="poliza.vehiculo.numeroPoliza" disabled ></td>
+            <td>
+            <table>
+              <tr>
+                <td class="Estilo1"> Fecha inicio de vigencia</td>
+              </tr>
+            </table>
+            </td>             
+            <td><input id="fechaInicioVigencia" type="text" name="fechaInicioVigencia"    ng-model="poliza.vehiculo.fechaInicioVigencia" disabled ></td>
+          </tr>
+          <tr>
+            <td>
+            <table>
+              <tr>
+                <td class="Estilo1">Fecha fin de vigencia </td>
+              </tr>
+            </table>
+            </td>            
+            <td><input id="fechaFinVigencia" type="text" name="fechaFinVigencia"  ng-model="poliza.vehiculo.fechaFinVigencia" disabled ></td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+          </tr>
+        </table>
+<br>
+        <form name="ingreso">
+        <table ng-repeat="poliza in polizas" style="width: 860px">
+            <tr>
+              <td>
+              <table>
+                <tr>
+                  <td class="Estilo1" >Fecha del incidente (*)</td>
+                </tr>
+              </table>
+              </td>             
+              <td><input type="date" id="fechaIncidente"  name="fechaIncidente" required></td>
+              <td>
+              <table>
+                <tr>
+                   <td class="Estilo1">Motivo incidente (*)</td>
+                </tr>
+              </table>
+              </td>           
+              <td><select id="listaMotivos" ng-model="motivo" ng-options="m.name for m in motivos" required></select></td>
+            </tr>
+            <tr>
+              <td>
+              <table>
+                <tr>
+                  <td class="Estilo1">Valor reparación aprox (*)</td>
+                </tr>
+              </table>
+              </td>            
+              <td><input  type="number" id="valor" name="valor" required></td>
+              <td>
+              <table>
+                <tr>
+                  <td class="Estilo1">Descripción (*)</td>
+                </tr>
+              </table>
+              </td>            
+              <td><textarea <input id="descripcionIncidente"  name="descripcionIncidente" rows="4" cols="30" required></textarea></td>
+            </tr>
+            <tr>
+              <td>
+              <table>
+                <tr>
+                  <td class="Estilo1">Lugar del incidente (*)</td>
+                </tr>
+              </table>
+              </td>             
+              <td><input id="lugarIncidente" type="text" name="lugarIncidente"  required></td>
+              <td>
+              <table>
+                <tr>
+                   <td class="Estilo1">Culpable (*)</td>
+                </tr>
+              </table>
+              </td>            
+              <td>Si <input type="radio" name="culpable" value="si" required> No <input type="radio" name="culpable" value="no"> </td>
+            </tr>
+            <tr>
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
+              <td>&nbsp; <button type="submit" ng-click="guardarIncidente()"> Enviar</button></td>
+            </tr>  
+        </table>
+        </form> 
+  </div>
+</div>
+
