nuevo consumo de objetos json

--- a/app/vistas/formularioReclamacion.html
+++ b/app/vistas/formularioReclamacion.html
@@ -44,7 +44,7 @@ padding-left:3px;
         <tr>
           <td>&nbsp;</td> 
           <td class="Estilo1">Tipo de documento (*)&nbsp;</td>
-          <td class="Estilo1"><select id="tipoDocumentoCliente" ng-model="documento" ng-options="c.name for c in documentos" required></select></td>
+          <td class="Estilo1"><select id="tipoDocumentoCliente" ng-model="documento" ng-options="c.id for c in documentos" required></select></td>
           <td class="Estilo1">&nbsp;</td>  
           <td>&nbsp;</td>             
         </tr>
