Mas consumo Json
Motivo incidente

--- a/app/vistas/formularioReclamacion.html
+++ b/app/vistas/formularioReclamacion.html
@@ -125,7 +125,7 @@ padding-left:3px;
             <td class="Estilo1" >Fecha del incidente (*)</td>
             <td class="Estilo1"><input type="date" id="fechaIncidente"  name="fechaIncidente" required></td>
             <td class="Estilo1">Motivo incidente (*)</td>
-            <td class="Estilo1"><select id="listaMotivos" ng-model="motivo" ng-options="m.name for m in motivos" required></select></td>
+            <td class="Estilo1"><select id="listaMotivos" ng-model="motivo" ng-options="m.id for m in motivos" required></select></td>
             <td>&nbsp;</td>
           </tr>
           <tr>
